# ZeroBraneStudio

./: .gitmodules  CMakeLists.txt
src/: config.lua  main.lua  util.lua
src/editor/: gui.lua  package.lua
zbstudio/ZeroBraneStudio.app/Contents/MacOS/: ZeroBraneStudio
